# attestations

./: README.md  SNIP-XXX.md  SPEC.md  Scarb.toml  TODO.md  demo_concepts.md  flake.nix
crates/attestation-derive/: Cargo.toml
crates/attestation-derive/src/: lib.rs
crates/cairo-attestation-plugin/: Cargo.toml
crates/cairo-attestation-plugin/src/: lib.rs
examples/: derive_example.cairo
src/: codegen.cairo  contract.cairo  derive.cairo  implementation.cairo  interfaces.cairo  lib.cairo  macros.cairo  main.cairo  types.cairo
src/implementation/: discord_attestation.cairo
