[package]
name = "cairo-attestation-plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cairo-lang-defs = "2.6.3"
cairo-lang-diagnostics = "2.6.3"
cairo-lang-filesystem = "2.6.3"
cairo-lang-parser = "2.6.3"
cairo-lang-plugins = "2.6.3"
cairo-lang-syntax = "2.6.3"
cairo-lang-utils = "2.6.3"
indoc = "2.0"
